[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemies/mouse_knight_idle_s.png" type="Texture" id=1]
[ext_resource path="res://Enemy_Elements/Boss.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 29.5 )

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 5.5 )
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="FlickerTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
